--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,25 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+    margin: 0;
+    padding: 0.25rem;
+    box-sizing: border-box;
 }
 
-h1 {
-  text-align: center;
+body {
+    background-color: #333;
+    color: whitesmoke;
+    display: grid;
+    place-content: center;
+    font-size: 150%;
 }
 
-.input-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  width: 30%;
-  margin: 0 auto;
+button {
+    font-size: 2rem;
 }
 
-
-.input-container button{
-  background-color: aqua;
-  padding: 5px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 0 0 5px blue;
-  cursor: pointer;
-  transition: all 500ms ease-in-out;
+.bold {
+    font-weight: bold;
 }
 
-.input-container button:hover {
-  background-color: gold;
-  box-shadow: 0 0 5px yellow;
-  scale: 0.9;
-}
-
-.input-container input{
-  border-radius: 5px;
-  transition: all 500ms ease-in-out;
-  padding: 5px;
+.gold {
+    color: gold;
 }
